# dual_xarm_double_insert_sim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: sim_dual_xarms_double_insert_20260518_121749_slim.npz
dual_xarms_sim/: __init__.py  fix_dual_xarms_sim.py  mujoco_gym_env.py  oculus_intervention.py  recover_mocap.py  relative_frame.py  replay_abs_action.py  replay_insert_data.py
dual_xarms_sim/ufactory_xarm7/: dual_xarm7_small_hand.xml  insert_scene.xml
dual_xarms_sim/ufactory_xarm7/assets/: left_finger.stl  left_tiny_finger.stl  right_finger.stl  right_tiny_finger.stl
dual_xarms_sim/utils/: network.py  transformation.py
scripts/: make_slim_npz.py
tests/: conftest.py  test_recover_mocap.py
